# journal

./: .drone.yml  JOURNAL_MANAGER_README.md  Journals.md  README.md  SYNC_README.md  coding-journal-prompt.md  install.sh  journal_manager.py  journal_sync.py  pyproject.toml  run_journal.sh  sync.sh
